--- a/src/app/form-component/form-component.component.html
+++ b/src/app/form-component/form-component.component.html
@@ -1,4 +1,4 @@
-<div style="height: 100vh; width:100vw;" [ngClass]="selectedTheme">
+<div style="height: 100vh; width:100vw;" [ngClass]="selectedTheme()">
     <form [formGroup]="myForm" style="padding:10px">
         <h2>Crew Mojo Form</h2>
         <div class="form-grid">
@@ -48,20 +48,21 @@
                     <mat-option value="system">System</mat-option>
                 </mat-select>
                 @if(myForm.get('settings.theme')?.hasError('required')){
-                    <mat-error >
-                        Theme is required.
-                    </mat-error>
+                <mat-error>
+                    Theme is required.
+                </mat-error>
                 }
             </mat-form-field>
 
             <mat-form-field appearance="outline" class="full-width">
                 <mat-label>Refresh Interval (seconds)</mat-label>
                 <input type="number" matInput formControlName="refreshInterval" />
-                <mat-error *ngIf="myForm.get('settings.refreshInterval')?.hasError('pattern')">
+                @if(myForm.get('settings.refreshInterval')?.hasError('pattern')){
+                <mat-error>
                     Refresh interval must be a positive number.
                 </mat-error>
+                }
             </mat-form-field>
-
             <mat-slide-toggle formControlName="notifications">
                 Notifications
             </mat-slide-toggle>
@@ -71,13 +72,16 @@
         <!-- Members Section -->
         <h3>Members</h3>
         <div formArrayName="members" class="form-grid-member">
-            <div *ngFor="let member of members.controls; let i = index" [formGroupName]="i" class="mb-3">
+            @for (member of members.controls; let i = $index; track i) {
+            <div [formGroupName]="i" class="mb-3">
                 <mat-form-field appearance="outline" class="full-width" style="margin-right:10px">
                     <mat-label>Member Name</mat-label>
                     <input matInput formControlName="name" />
-                    <mat-error *ngIf="members.at(i).get('name')?.hasError('required')">
+                    @if(members.at(i).get('name')?.hasError('required')){
+                    <mat-error>
                         Member name is required
                     </mat-error>
+                    }
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="full-width">
@@ -86,23 +90,30 @@
                         <mat-option value="Admin">Admin</mat-option>
                         <mat-option value="User">User</mat-option>
                     </mat-select>
-                    <mat-error *ngIf="members.at(i).get('role')?.hasError('required')">
-                        Role is required
+                    @if(members.at(i).get('role')?.hasError('required')){
+                    <mat-error>
+                        Role is required.
                     </mat-error>
+                    }
                 </mat-form-field>
 
                 <button mat-button color="warn" type="button" (click)="removeMember(i)">Remove</button>
-            </div>
+            </div>}
             <button style="margin-bottom:10px" mat-raised-button color="accent" type="button" (click)="addMember()">
                 Add Member
             </button>
-            <button style="margin-bottom:10px;margin-left:15px" [disabled]="!myForm.valid" mat-raised-button color="accent" type="button" (click)="onSubmit()">
+            <button style="margin-bottom:10px;margin-left:15px" [disabled]="!myForm.valid" mat-raised-button
+                color="accent" type="button" (click)="onSubmit()">
                 Submit
             </button>
         </div>
-    
+
         <h3>Form JSON:</h3>
-        <textarea [value]="myForm.value | json" rows="15" cols="50"
-            (input)="onJsonInputChange($event)"></textarea>
+        <textarea [value]="inputValue ? inputValue : myForm.value | json" rows="15" cols="50" (input)="onJsonInputChange($event)"
+            [ngClass]="{ 'invalid-json': !isJsonValid() }"></textarea>
+        @if(!isJsonValid() ){
+        <mat-error>
+            Invalid Json.
+        </mat-error>}
     </form>
 </div>
